[tool.poetry]
name = "platform-back"
version = "1.0.0"
description = ""
authors = ["BIMData Team <infra@bimdata.io>"]

[tool.poetry.dependencies]
# Incompatibility with 3.13 (No module named 'cgi')
python = "^3.12"
bimdata-api-client = "^10.14.3"
# Can't upgrade to 5.1 or 5.2 with django-cron
# TypeError: 'class Meta' got invalid attribute(s): index_together
django = {extras = ["argon2"], version = "~5.0.14"}
django-cors-headers = "^4.7.0"
django-environ = "^0.12.0"
django-health-check = "^3.18.3"
django-filter = "^21.1"
django-grappelli = "^4.0.2"
django-postgres-extra = "^2.0.8"
django-replicated = {git = "https://github.com/bimdata/django_replicated.git"}
django-split-settings = "^1.3.2"
djangorestframework = "^3.16.0"
drf-oidc-auth = "^3.0.0"
drf-yasg = "^1.21.10"
fluent-logger = "^0.11.1"
gunicorn = "^23.0.0"
inflection = "^0.5.1"
psycopg = {extras = ["binary"], version = "^3.2.7"}
python-dotenv = "^1.1.0"
requests = "^2.32.3"
whitenoise = "^6.9.0"
django-cron = "^0.6.0"
django-json-widget = {git = "https://github.com/jmrivas86/django-json-widget.git"}
coreapi = "^2.3.3" # archived since 2019

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
gunicorn = "^23.0.0"
uvicorn = "^0.34.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
django-debug-toolbar = "^5.2.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
pyflakes = "^3.3.2"
reorder-python-imports = "^3.14.0"
pycodestyle = "^2.13.0"

[tool.poetry.group.test.dependencies]
pytest-django = "^4.11.1"

[tool.black]
line-length = 95
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
